minor: debts
